--- a/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/detail-assessment/dashboard-programs/dashboard-programs.component.html
+++ b/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/src/app/components/common/detail-assessment/dashboard-programs/dashboard-programs.component.html
@@ -29,7 +29,7 @@
             <div class="col-xs-12 col-md-12 col-sm-12 d-flex" *ngxPermissionsOnly="['ViewComponentReviewNotes']">
                 <div [ngClass]="(this.reviewNotesFlag == true)?'dasboard-side-div':''"
                     class="col-xs-12 col-md-12 col-sm-12 dasboard-side-label  mt-2">
-                    <label (click)="ReviewNotes()" class="dashboard-p2 pointer"
+                    <label (click)="goToReviewNotes()" class="dashboard-p2 pointer"
                         [ngClass]="(this.reviewNotesFlag == true)?'dashboard-side-div-label':''">{{ReviewNotes1}}</label>
 
                     <span class="upperCurve" *ngIf="this.reviewNotesFlag == true"></span>
